unpackaged/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.Employee_designation__c</field>
                <operation>notContain</operation>
                <value>Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_of_work__c</fullName>
        <label>Percentage of work</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <description>Describe ask the task in detail</description>
        <label>Task Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>actual_end_date__c</fullName>
        <label>actual end date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>actual_started__c</fullName>
        <label>actual started</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>task_status</fullName>
        <active>true</active>
        <description>give the status of project</description>
        <errorConditionFormula>(ISPICKVAL( Status__c ,&apos;None&apos;) ||  ISPICKVAL( Status__c , &apos;--None--&apos;) )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>it should not be &quot;None&quot;</errorMessage>
    </validationRules>
</CustomObject>